Set minimum width of 600px for camera details to prevent squished layout

--- a/src/BuckScience.Web/wwwroot/css/site.css
+++ b/src/BuckScience.Web/wwwroot/css/site.css
@@ -476,6 +476,7 @@
 .camera-details {
     min-height: 100%;
     max-width: 1200px;
+    min-width: 600px;
 }
 
 .sidebar-title {
